# untappd-data-parser

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  biome.json  build.py  package-lock.json  package.json  pixi.toml  pyproject.toml  ruff.toml  style.css  stylelint.config.mjs  untappd.html  untappd.py
.github/: dependabot.yml
.github/workflows/: biome.yml  lint.yml  ruff.yml  stylelint.yml
.husky/: pre-commit
src/: untappd_parser_bundle.py
src/untappd_parser/: __init__.py  cli.py  parser.py  web.py
tests/: test_parser.py
