[build-system]
requires = ["setuptools>=79.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "untappd-data-parser"
version = "0.1.0"
description = "Parse and analyze Untappd beer check-in data exports"
readme = "README.md"
authors = [
    {name = "Clay Dugo", email = "claydugo@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
keywords = ["untappd", "beer", "data-analysis", "csv", "json"]
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/claydugo/untappd-data-parser"
Issues = "https://github.com/claydugo/untappd-data-parser/issues"

[project.scripts]
untappd-parser = "untappd_parser.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "python-minifier>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
